--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.10"
 
 install:
-  - pip install -r requirements.txt
+  - pip install pytest
 
 script:
-  - python test.py
+  - pytest
